--- a/www/css/main.css
+++ b/www/css/main.css
@@ -187,6 +187,13 @@ a.menubutton {
 	display: flex;
 	width: 100%;
 }
+#rightChatSectionHeader {
+	border-bottom: 1px solid #011A27;
+	text-align: center;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	cursor: default;
+}
 .serviceMsg {
 	font-style: italic;	
 }
